# references

./: .gitignore  CMakeLists.txt  test.yaml
C/: assignment-operators.c  formatting.c  increment-decrement.c  nested-conditional-operators.c  numbers.c  while-loops.c
Python/: data types.py  data types2.py  dictionaries.py  lists.py  loops.py  operators.py  sets.py  string operators.py  test.py  tuples vs lists.py
SQL/: SQLExample.sql  erd.drawio
asm/: exit64  exit64.asm  hello_world  hello_world.s  registers.asm
c/: file_read.c  functions.c  input_line.c  input_numbers.c  input_strings.c  loops_count.c  operators_conditionals.c  operators_relational.c  printf.c
c/syntax/: input.c  (+4 more)
data-structures-and-algorithms/: 01_intro.md  find_minimum.py
git/: git-cheat-sheet.md
haskell/: hello.hs
js/: variables.js
lua/: control_flow.lua  functions.lua  info.md  metatables.lua  modules.lua  tables.lua  variables.lua
python/: api.py  binary.py  bitwise.py  bitwise_and_operator.py  closures.py  data_types.py  date_and_time.py  decorators.py  enums.py  error_handling.py  find_and_replace.py  function_transformations.py  functions.py  gui.py  infinity.py  inheritance.py  int_float_etc.py  list_dictionaries.py  list_lists.py  list_sets.py  list_tuples.py  loops_for.py  numeric_operators.py  operators.py  pass_by_value_reference.py  polymorphism.py  print_and_string.py  recursion.py  sorting.py  string_operators.py  strings.py  strings_w_numbers.py  syntax.py  ternary_expressions.py  test.py  variabels_data_types.py  variable_types.py  variables.py  variables_operators.py
(+354 files in other folders)
